--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,24 @@
 version: 2.1
 
+# Define the jobs we want to run for this project
 jobs:
   build:
-    docker: cimg/base:2022.03
+    docker:
+      - image: cimg/base:2023.03
     steps:
       - checkout
-      - run
-        name: 'run' statements can actually contain a 'name' and 'command' argument as well
-        command: | 
-          echo "You can even have multiline commands."
-      - restore_cache:
-          keys:
-          - v1-dependencies-
-      - run: mkdir ~/cache/
-      - run: echo "testfile" > ~/cache/log.txt
-      - save_cache:
-          key: v1-dependencies-
-          paths: ~/cache
+      - run: echo "this is the build job"
+  test:
+    docker:
+      - image: cimg/base:2023.03
+    steps:
+      - checkout
+      - run: echo "this is the test job"
 
+# Orchestrate our job run sequence
 workflows:
-  build-workflow:
-    jobs: build
-
+  build_and_test:
+    jobs:
+      - build
+      - test
 
